--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
     <meta name="description" content="Lead Engine CRE - Decentralized Real-Time Bidding Platform for Lead Marketplace. Buy and sell leads across any vertical with web3 trust and instant USDC payments." />
     <meta name="keywords" content="leads, RTB, real-time bidding, web3, blockchain, USDC, marketplace" />
     <title>Lead Engine CRE - Decentralized Lead Marketplace</title>
